# ainode

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish-image.yml
ainode/: __init__.py
ainode/api/: server.py  server_routes.py
ainode/auth/: __init__.py  api_routes.py  middleware.py
ainode/cli/: doctor.py  main.py
ainode/cluster/: __init__.py  hca_discovery.py
ainode/core/: config.py  gpu.py
ainode/datasets/: __init__.py  api_routes.py  manager.py
ainode/discovery/: __init__.py  broadcast.py  cluster.py
ainode/embeddings/: __init__.py  api_routes.py  manager.py
ainode/engine/: docker_engine.py  ray_autostart.py  ray_setup.py  sharding.py  sharding_routes.py  vllm_engine.py
ainode/metrics/: __init__.py  api_routes.py  collector.py  prometheus.py
ainode/models/: __init__.py  api_routes.py  registry.py
ainode/onboarding/: api_routes.py  setup.py
ainode/secrets/: __init__.py  api_routes.py  manager.py
ainode/service/: __init__.py  systemd.py
ainode/training/: __init__.py  _run_training.py  api_routes.py  engine.py
ainode/web/: __init__.py  serve.py
docs/design/: v0.5.0-catalog-service.md
ops/: agents.md
ops/log/: handoff-2026-04-12-session2-final.md  handoff-2026-04-12-session2.md  handoff-2026-04-12.md  handoff-2026-04-13.md
ops/rules/: agent-coordination.md  branching.md  never-do.md
ops/runbooks/: dev-workflow.md  ops-master.md  (+5 more)
scripts/: Dockerfile.ainode  RUN_CLUSTER_SH.md  build-base-image.sh  docker-compose.nvidia.yaml  docker-entrypoint.sh  install.sh  nccl-env-init.sh  uninstall.sh
tests/: test_api.py  test_auth.py  test_cli.py  test_cluster.py  test_cluster_roles.py  test_config.py  test_datasets.py  test_discovery.py  test_distributed.py  test_docker_engine.py  test_embeddings.py  test_engine.py  test_engine_backends.py  test_gpu.py  test_hca_discovery.py  test_metrics.py  test_metrics_prometheus.py  test_models.py  test_nvidia_backend.py  test_onboarding.py  test_secrets.py  test_service.py  test_sharding.py  test_training.py  test_training_command.py  test_web.py
(+10 files in other folders)
